<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg"
    android:layout_weight="232"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/purple_500">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="30sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="8"
            android:weightSum="3">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/field_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="180dp"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/log_email"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="18sp"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:layout_gravity="center"
                        android:hint="@string/email"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/field_pass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/field_email"
                    android:layout_marginBottom="10dp">
                    <EditText
                        android:id="@+id/log_correo"
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="18sp"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:layout_gravity="center"
                        android:hint="@string/password"
                        android:inputType="textPassword"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/field_pass"
                    android:layout_marginBottom="10dp">
                    <Button
                        android:id="@+id/log_iniciar"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/login"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="20dp">
                    <Button
                        android:id="@+id/log_regresar"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-black"
                        android:textSize="18sp"
                        android:layout_gravity="center"
                        android:text="@string/regresar"/>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/purple_500">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creditos"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-black"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="15sp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>